--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,71 @@
 appdirs==1.4.4
+attrs==19.3.0
+backcall==0.2.0
+bleach==3.1.5
+certifi==2020.6.20
 cfgv==3.1.0
 cflib==0.1.11
--e git+git@github.com:Huizerd/crazyflie-suite.git@13772f5b9a8c307db3c5e610a23974702badcab1#egg=crazyflie_suite
+chardet==3.0.4
+-e git+git@github.com:Huizerd/crazyflie-suite.git@14ead4c824ea7236324038beb587e5c0fbab800b#egg=crazyflie_suite
+cycler==0.10.0
+decorator==4.4.2
+defusedxml==0.6.0
 distlib==0.3.1
+entrypoints==0.3
 filelock==3.0.12
 identify==1.4.21
+idna==2.10
 importlib-metadata==1.7.0
 importlib-resources==3.0.0
+ipykernel==5.3.1
+ipython==7.16.1
+ipython-genutils==0.2.0
+jedi==0.17.1
+Jinja2==2.11.2
+json5==0.9.5
+jsonschema==3.2.0
+jupyter-client==6.1.5
+jupyter-core==4.6.3
+jupyterlab==2.1.5
+jupyterlab-server==1.2.0
+kiwisolver==1.2.0
+MarkupSafe==1.1.1
+matplotlib==3.2.2
+mistune==0.8.4
+nbconvert==5.6.1
+nbformat==5.0.7
 nodeenv==1.4.0
+notebook==6.0.3
 numpy==1.19.0
+packaging==20.4
+pandas==1.0.5
+pandocfilters==1.4.2
+parso==0.7.0
+pexpect==4.8.0
+pickleshare==0.7.5
 pkg-resources==0.0.0
 pre-commit==2.6.0
+prometheus-client==0.8.0
+prompt-toolkit==3.0.5
+ptyprocess==0.6.0
+Pygments==2.6.1
+pyparsing==2.4.7
+pyrsistent==0.16.0
+python-dateutil==2.8.1
+pytz==2020.1
 pyusb==1.0.2
 PyYAML==5.3.1
+pyzmq==19.0.1
+requests==2.24.0
+Send2Trash==1.5.0
 six==1.15.0
+terminado==0.8.3
+testpath==0.4.4
 toml==0.10.1
+tornado==6.0.4
+traitlets==4.3.3
+urllib3==1.25.9
 virtualenv==20.0.25
+wcwidth==0.2.5
+webencodings==0.5.1
 zipp==3.1.0
