--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
 venv/
-data/
-configs/
+data/*
+configs/*
+analysis/*
 .vscode/
 **/__pycache__/
 **/*.egg-info/
 **/cache/
 **/.ipynb_checkpoints/
+
+!data/example*
+!configs/example*
+!analysis/example*
